--- a/venta_principal.ui
+++ b/venta_principal.ui
@@ -465,6 +465,26 @@
            <height>22</height>
           </rect>
          </property>
+         <item>
+          <property name="text">
+           <string>Pontevedra</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>A Coruña</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Ourense</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Lugo</string>
+          </property>
+         </item>
         </widget>
         <widget class="QLabel" name="lblSalario">
          <property name="geometry">
