--- a/venta_principal.ui
+++ b/venta_principal.ui
@@ -49,7 +49,7 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1">
+    <item row="0" column="0">
      <widget class="QTabWidget" name="tabPrincipal">
       <property name="currentIndex">
        <number>0</number>
@@ -61,10 +61,10 @@
        <widget class="QFrame" name="frame">
         <property name="geometry">
          <rect>
-          <x>80</x>
+          <x>20</x>
           <y>10</y>
-          <width>851</width>
-          <height>181</height>
+          <width>951</width>
+          <height>201</height>
          </rect>
         </property>
         <property name="frameShape">
@@ -249,7 +249,7 @@
           <rect>
            <x>80</x>
            <y>50</y>
-           <width>331</width>
+           <width>381</width>
            <height>20</height>
           </rect>
          </property>
@@ -284,7 +284,7 @@
           <rect>
            <x>550</x>
            <y>50</y>
-           <width>251</width>
+           <width>311</width>
            <height>20</height>
           </rect>
          </property>
@@ -359,7 +359,7 @@
           <rect>
            <x>80</x>
            <y>90</y>
-           <width>331</width>
+           <width>300</width>
            <height>20</height>
           </rect>
          </property>
@@ -373,7 +373,7 @@
         <widget class="QLabel" name="lblMovil">
          <property name="geometry">
           <rect>
-           <x>30</x>
+           <x>20</x>
            <y>130</y>
            <width>47</width>
            <height>16</height>
@@ -411,7 +411,7 @@
         <widget class="QLabel" name="lblLocalidad">
          <property name="geometry">
           <rect>
-           <x>620</x>
+           <x>650</x>
            <y>90</y>
            <width>61</width>
            <height>16</height>
@@ -430,9 +430,9 @@
         <widget class="QComboBox" name="cmbLocalidad">
          <property name="geometry">
           <rect>
-           <x>690</x>
+           <x>720</x>
            <y>90</y>
-           <width>131</width>
+           <width>201</width>
            <height>22</height>
           </rect>
          </property>
@@ -440,9 +440,9 @@
         <widget class="QLabel" name="lblProvincia">
          <property name="geometry">
           <rect>
-           <x>420</x>
+           <x>410</x>
            <y>90</y>
-           <width>61</width>
+           <width>51</width>
            <height>16</height>
           </rect>
          </property>
@@ -459,9 +459,9 @@
         <widget class="QComboBox" name="cmbProvincia">
          <property name="geometry">
           <rect>
-           <x>490</x>
+           <x>470</x>
            <y>90</y>
-           <width>111</width>
+           <width>151</width>
            <height>22</height>
           </rect>
          </property>
@@ -521,6 +521,177 @@
          </property>
          <property name="text">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;€&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="lbltipoCarnet">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>170</y>
+           <width>91</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>100</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Tipo de Carnet: &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="chkA">
+         <property name="geometry">
+          <rect>
+           <x>110</x>
+           <y>170</y>
+           <width>40</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>A</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="chkB">
+         <property name="geometry">
+          <rect>
+           <x>150</x>
+           <y>170</y>
+           <width>40</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>B</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="chkC">
+         <property name="geometry">
+          <rect>
+           <x>190</x>
+           <y>170</y>
+           <width>40</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>C</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="chkD">
+         <property name="geometry">
+          <rect>
+           <x>230</x>
+           <y>170</y>
+           <width>40</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>D</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="lblEstado">
+         <property name="geometry">
+          <rect>
+           <x>410</x>
+           <y>130</y>
+           <width>51</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>100</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Estado: &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+        <widget class="QRadioButton" name="rbtTodos">
+         <property name="geometry">
+          <rect>
+           <x>470</x>
+           <y>130</y>
+           <width>80</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>80</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Todos</string>
+         </property>
+        </widget>
+        <widget class="QRadioButton" name="rbtAlta">
+         <property name="geometry">
+          <rect>
+           <x>530</x>
+           <y>130</y>
+           <width>51</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Alta</string>
+         </property>
+        </widget>
+        <widget class="QRadioButton" name="rbtBaja">
+         <property name="geometry">
+          <rect>
+           <x>580</x>
+           <y>130</y>
+           <width>51</width>
+           <height>17</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Baja</string>
          </property>
         </widget>
        </widget>
@@ -628,7 +799,6 @@
   </action>
  </widget>
  <tabstops>
-  <tabstop>tabPrincipal</tabstop>
   <tabstop>txtDni</tabstop>
   <tabstop>txtFechaAlta</tabstop>
   <tabstop>btnCalendario</tabstop>
