--- a/templates/venta_principal.ui
+++ b/templates/venta_principal.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1024</width>
-    <height>769</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,8 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>1024</width>
-    <height>768</height>
+    <width>800</width>
+    <height>600</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -39,18 +39,39 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../../../Documents/Desenvolvemento Interfaces/imagenes/travel_car_BMV_1741.png</normaloff>../../../Documents/Desenvolvemento Interfaces/imagenes/travel_car_BMV_1741.png</iconset>
+    <normaloff>../IMG/travel_car_BMV_1741.png</normaloff>../IMG/travel_car_BMV_1741.png</iconset>
+  </property>
+  <property name="layoutDirection">
+   <enum>Qt::LeftToRight</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
-    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
+   <property name="minimumSize">
+    <size>
+     <width>800</width>
+     <height>600</height>
+    </size>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
+   </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <widget class="QTabWidget" name="panelPrincipal">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>2</horstretch>
+        <verstretch>2</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="tabShape">
+       <enum>QTabWidget::Triangular</enum>
+      </property>
       <property name="currentIndex">
        <number>0</number>
       </property>
@@ -62,10 +83,16 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>10</y>
+          <y>0</y>
           <width>981</width>
           <height>253</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
         <property name="frameShape">
          <enum>QFrame::Box</enum>
@@ -219,7 +246,7 @@
          </property>
          <property name="icon">
           <iconset>
-           <normaloff>../../../Documents/Desenvolvemento Interfaces/imagenes/descarga_calendario.png</normaloff>../../../Documents/Desenvolvemento Interfaces/imagenes/descarga_calendario.png</iconset>
+           <normaloff>../IMG/descarga_calendario.png</normaloff>../IMG/descarga_calendario.png</iconset>
          </property>
         </widget>
         <widget class="QLabel" name="lblApellido">
@@ -633,7 +660,7 @@
           <enum>QFrame::Raised</enum>
          </property>
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Estado: &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Histórico&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
         </widget>
         <widget class="QRadioButton" name="rbtTodos">
@@ -696,7 +723,7 @@
         <widget class="QPushButton" name="btnAltaDriver">
          <property name="geometry">
           <rect>
-           <x>270</x>
+           <x>280</x>
            <y>220</y>
            <width>75</width>
            <height>23</height>
@@ -715,7 +742,7 @@
         <widget class="QPushButton" name="btnModifDriver">
          <property name="geometry">
           <rect>
-           <x>380</x>
+           <x>410</x>
            <y>220</y>
            <width>75</width>
            <height>23</height>
@@ -734,7 +761,7 @@
         <widget class="QPushButton" name="btnBajaDriver">
          <property name="geometry">
           <rect>
-           <x>500</x>
+           <x>530</x>
            <y>220</y>
            <width>75</width>
            <height>23</height>
@@ -887,7 +914,8 @@
   <action name="actionbarSalir">
    <property name="icon">
     <iconset>
-     <normaloff>../../../Documents/Desenvolvemento Interfaces/imagenes/imagen_salir.png</normaloff>../../../Documents/Desenvolvemento Interfaces/imagenes/imagen_salir.png</iconset>
+     <normaloff>../../../../Documents/Desenvolvemento Interfaces/imagenes/imagen_salir.png</normaloff>
+     <normalon>../IMG/imagen_salir.png</normalon>../../../../Documents/Desenvolvemento Interfaces/imagenes/imagen_salir.png</iconset>
    </property>
    <property name="text">
     <string>barSalir</string>
@@ -896,7 +924,8 @@
   <action name="actionlimpiarPanel">
    <property name="icon">
     <iconset>
-     <normaloff>../IMG/limpiar.png</normaloff>../IMG/limpiar.png</iconset>
+     <normaloff>../../../.designer/IMG/limpiar.png</normaloff>
+     <normalon>../IMG/limpiar.png</normalon>../../../.designer/IMG/limpiar.png</iconset>
    </property>
    <property name="text">
     <string>limpiarPanel</string>
