--- a/templates/ventana_salir.ui
+++ b/templates/ventana_salir.ui
@@ -93,7 +93,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>IMG/imagen_salir.png</pixmap>
+    <pixmap>../IMG/imagen_salir.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
